src/objects/tinderbox__TinderBox__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Octiv Settings</description>
    <fields>
        <fullName>tinderbox__Company_URL__c</fullName>
        <inlineHelpText>Your organization&apos;s TinderBox URL. For instance, acme.mytinder.com.</inlineHelpText>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tinderbox__Disable_SessionID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will not pass sessionID or serverURL from VisualForce pages to TinderBox iframes. Instead userID is passed and the integration account is relied on for all API requests.</description>
        <inlineHelpText>Enable this option if you do not want Session IDs to be passed to TinderBox.</inlineHelpText>
        <label>Disable Session ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tinderbox__Generate_Custom_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Custom Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tinderbox__Ignite_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Package displays new Ignite UI vs Legacy UI</description>
        <inlineHelpText>Use New Ignite UI</inlineHelpText>
        <label>Ignite View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tinderbox__Line_Item_Filter__c</fullName>
        <description>Clause that will be appended to the Opportunity Line Item SOQL query that will determine which products are included in the generated pricing page.</description>
        <inlineHelpText>Optional SOQL clause used to filter Opportunity Line Items when generating the pricing page.</inlineHelpText>
        <label>Line Item Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record Log statements to the log file.</description>
        <inlineHelpText>Record Log statements to the log file.</inlineHelpText>
        <label>Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tinderbox__Pricing_Footer_Field__c</fullName>
        <label>Pricing Footer Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Pricing_HTML_Field__c</fullName>
        <label>Pricing HTML Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Pricing_Header_Field__c</fullName>
        <label>Pricing Header Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Pricing_Line_Item_Field__c</fullName>
        <label>Pricing Line Item Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Sort_Field_1__c</fullName>
        <description>This field should be on the Opportunity Line Item.</description>
        <inlineHelpText>Field on the Opportunity Line Item used to sort the pricing table.</inlineHelpText>
        <label>Pricing Sort Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Sort_Field_2__c</fullName>
        <description>This field is used as a secondary sort when creating the product pricing table.</description>
        <inlineHelpText>Optional field on the Opportunity Line Item used as a secondary sort.</inlineHelpText>
        <label>Pricing Sort Field 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Use_HTTPS__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When this is checked, all references to TinderBox URLs will be over HTTPS. This is recommended.</inlineHelpText>
        <label>Use HTTPS</label>
        <type>Checkbox</type>
    </fields>
    <label>Octiv</label>
</CustomObject>